<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/about_sawah" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_user_guide"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/user_guide" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_add_place"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/add_place" />

        <item
            android:id="@+id/nav_change_city"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/change_city" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/contact_us" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
