<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tw__solid_white">

    <com.sawah.sawah.custom_views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/open_map_with_text"
        android:textColor="@color/edit_profile_titles"
        android:layout_margin="10dp"/>
    <com.sawah.sawah.custom_views.CustomButton
        android:id="@+id/open_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_maps_text"
        android:textColor="@color/colorPrimary"/>
    <com.sawah.sawah.custom_views.CustomButton
        android:id="@+id/open_uber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_uber_text"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>