<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.accorpa.sawah.Authorization.EditPasswordFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/r1"
            android:gravity="right"
            android:padding="10dp" android:paddingBottom="15dp"
            android:paddingTop="15dp">
            <com.accorpa.sawah.custom_views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@color/edit_profile_titles"
                android:textSize="18sp"
                android:layout_marginRight="@dimen/listview_margin"
                android:layout_gravity="right|center_vertical" />
            <com.accorpa.sawah.custom_views.CustomEditText
                android:id="@+id/current_password_edit_text"
                style="@style/rowEditText"
                android:inputType="textPassword"
                android:layout_marginLeft="0dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/r2"
            android:gravity="right"
            android:padding="10dp" android:paddingBottom="15dp"  android:paddingTop="15dp"
            android:background="@color/dark_grey">
            <com.accorpa.sawah.custom_views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginRight="@dimen/listview_margin" />
            <com.accorpa.sawah.custom_views.CustomTextView
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:gravity="right"
            android:background="@drawable/under_line"
            android:padding="10dp" android:paddingBottom="15dp"
            android:paddingTop="15dp">
            <com.accorpa.sawah.custom_views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                android:textColor="@color/edit_profile_titles"
                android:textSize="18sp"
                android:layout_marginRight="@dimen/listview_margin"
                android:layout_gravity="right|center_vertical" />
            <com.accorpa.sawah.custom_views.CustomEditText
                android:id="@+id/edit_password_edit_text"
                style="@style/rowEditText"
                android:inputType="textPassword"
                android:layout_marginLeft="0dp" />
        </TableRow>

        <TableRow
            android:id="@+id/r4"
            android:gravity="right"
            android:background="@drawable/under_line"
            android:padding="10dp" android:paddingBottom="15dp"  android:paddingTop="15dp">
            <com.accorpa.sawah.custom_views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/edit_profile_titles"
                android:textSize="18sp"
                android:layout_marginRight="@dimen/listview_margin"
                android:layout_gravity="right|center_vertical" />
            <com.accorpa.sawah.custom_views.CustomEditText
                android:id="@+id/confirm_password_edit_text"
                style="@style/rowEditText"
                android:inputType="textPassword"
                android:layout_marginLeft="0dp" />
        </TableRow>

    </TableLayout>

    <com.accorpa.sawah.custom_views.CustomButton
        android:id="@+id/edit_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_progress_dialog_background"
        android:text="@string/save"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

</LinearLayout>





