<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:weightSum="13"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:id="@+id/nav_header_base"
            android:visibility="gone"
            android:layout_weight="4"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:weightSum="8">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:gravity="center">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/profile_layout">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/avatar_circles"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:padding="8dp"
                            android:src="@drawable/demoitem"/>
                    </RelativeLayout>
                    <ImageButton
                        android:id="@+id/settings_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/gear"
                        android:layout_centerVertical="true"
                        android:paddingLeft="150dp"/>
                </RelativeLayout>

                <com.sawah.sawah.custom_views.CustomTextView
                    android:id="@+id/user_name"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:paddingTop="10dp"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/textColor"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="2dp"
                    android:background="#ffffff"/>
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.sawah.sawah.custom_views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/home"
                    android:text="@string/dashboard"
                    android:id="@+id/nav_home"
                    style="@style/buttonWithIcon"
                    android:onClick="onClick"/>
                <com.sawah.sawah.custom_views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/about"
                    android:text="@string/about_sawah"
                    android:id="@+id/nav_about_sawah"
                    style="@style/buttonWithIcon"
                    android:onClick="onClick"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <com.sawah.sawah.custom_views.CustomButton
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/bell"
                        android:text="@string/notifications"
                        android:id="@+id/nav_notifications"
                        style="@style/buttonWithIcon"
                        android:onClick="onClick"/>
                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:checked="false"
                        android:theme="@style/switchCompat"/>
                </RelativeLayout>
                <com.sawah.sawah.custom_views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/clipboard"
                    android:text="@string/user_guide"
                    android:id="@+id/nav_general_inst"
                    style="@style/buttonWithIcon"
                    android:onClick="onClick"/>
                <com.sawah.sawah.custom_views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/heart"
                    android:text="@string/favourites"
                    android:id="@+id/nav_fav_list"
                    style="@style/buttonWithIcon"
                    android:onClick="onClick"/>
                <com.sawah.sawah.custom_views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/add_location"
                    android:text="@string/add_place"
                    android:id="@+id/nav_add_place"
                    style="@style/buttonWithIcon"
                    android:onClick="onClick"/>
                <com.sawah.sawah.custom_views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/change_city"
                    android:text="@string/change_city"
                    android:id="@+id/nav_change_city"
                    style="@style/buttonWithIcon"
                    android:onClick="onClick"/>
                <com.sawah.sawah.custom_views.CustomButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/contact_us"
                    android:text="@string/contact_us"
                    android:id="@+id/nav_contact_us"
                    style="@style/buttonWithIcon"
                    android:onClick="onClick"/>

                <!--<com.sawah.sawah.custom_views.CustomButton-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableRight="@drawable/gear"-->
                <!--android:text="@string/settings"-->
                <!--android:id="@+id/nav_settings"-->
                <!--style="@style/buttonWithIcon"-->
                <!--android:onClick="onClick"/>-->
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:layout_weight="1"
        android:orientation="vertical">
        <com.sawah.sawah.custom_views.CustomButton
            android:layout_margin="@dimen/listview_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded"
            style="?android:textAppearanceMedium"
            android:textColor="@color/textColor"
            android:text="@string/login_button"
            android:id="@+id/nav_login"
            android:onClick="onClick"/>
        <com.sawah.sawah.custom_views.CustomButton
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/circle_cross"
            android:text="@string/log_out"
            android:id="@+id/nav_logout"
            style="@style/buttonWithIcon"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>